<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/layout_rect_group" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.canzone.amllauncher.MyRelativeLayout android:id="@+id/layout_kodi" android:focusable="true" android:focusableInTouchMode="true" android:descendantFocusability="beforeDescendants" android:layout_width="272dp" android:layout_height="319dp" android:layout_marginLeft="65dp" android:layout_marginTop="64dp">
        <ImageView android:id="@+id/img_kodi" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/img_kodi" android:layout_centerInParent="true" android:alpha="0.8"/>
        <TextView android:textSize="30dp" android:textColor="@color/btn_text_color" android:id="@+id/tx_kodi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18dp" android:layout_marginTop="10dp" android:text="@string/str_video"/>
    </com.canzone.amllauncher.MyRelativeLayout>
    <com.canzone.amllauncher.MyRelativeLayout android:id="@+id/layout_youtube" android:focusable="true" android:focusableInTouchMode="true" android:descendantFocusability="beforeDescendants" android:layout_width="272dp" android:layout_height="319dp" android:layout_marginLeft="4dp" android:layout_marginTop="64dp" android:layout_toRightOf="@+id/layout_kodi">
        <ImageView android:id="@+id/img_youtube" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/img_youtube" android:layout_centerInParent="true" android:alpha="0.8"/>
        <TextView android:textSize="30dp" android:textColor="@color/btn_text_color" android:id="@+id/tx_youtube" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18dp" android:layout_marginTop="10dp" android:text="@string/str_app"/>
    </com.canzone.amllauncher.MyRelativeLayout>
    <com.canzone.amllauncher.MyRelativeLayout android:id="@+id/layout_store" android:focusable="true" android:focusableInTouchMode="true" android:descendantFocusability="beforeDescendants" android:layout_width="272dp" android:layout_height="319dp" android:layout_marginLeft="4dp" android:layout_marginTop="64dp" android:layout_toRightOf="@+id/layout_youtube">
        <ImageView android:id="@+id/img_store" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/img_store" android:layout_centerInParent="true" android:alpha="0.8"/>
        <TextView android:textSize="30dp" android:textColor="@color/btn_text_color" android:id="@+id/tx_store" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18dp" android:layout_marginTop="10dp" android:text="@string/str_music"/>
    </com.canzone.amllauncher.MyRelativeLayout>
    <com.canzone.amllauncher.MyRelativeLayout android:id="@+id/layout_app" android:focusable="true" android:focusableInTouchMode="true" android:descendantFocusability="beforeDescendants" android:layout_width="176dp" android:layout_height="159dp" android:layout_marginLeft="65dp" android:layout_marginTop="4dp" android:layout_below="@+id/layout_kodi">
        <ImageView android:id="@+id/img_app" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/img_app" android:layout_centerInParent="true" android:alpha="0.8"/>
        <TextView android:textSize="25dp" android:textColor="@color/btn_text_color" android:id="@+id/tx_app" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="9dp" android:text="@string/str_app"/>
    </com.canzone.amllauncher.MyRelativeLayout>
    <com.canzone.amllauncher.MyRelativeLayout android:id="@+id/layout_browser" android:focusable="true" android:focusableInTouchMode="true" android:descendantFocusability="beforeDescendants" android:layout_width="320dp" android:layout_height="159dp" android:layout_marginLeft="4dp" android:layout_marginTop="4dp" android:layout_toRightOf="@+id/layout_app" android:layout_below="@+id/layout_kodi">
        <ImageView android:id="@+id/img_browser" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/img_browser" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:alpha="0.8"/>
    </com.canzone.amllauncher.MyRelativeLayout>
    <com.canzone.amllauncher.MyRelativeLayout android:id="@+id/layout_video" android:focusable="true" android:focusableInTouchMode="true" android:descendantFocusability="beforeDescendants" android:layout_width="320dp" android:layout_height="159dp" android:layout_marginLeft="4dp" android:layout_marginTop="4dp" android:layout_toRightOf="@+id/layout_browser" android:layout_below="@+id/layout_kodi">
        <ImageView android:id="@+id/img_video" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/img_video" android:layout_centerInParent="true" android:alpha="0.8"/>
    </com.canzone.amllauncher.MyRelativeLayout>
    <com.canzone.amllauncher.MyRelativeLayout android:id="@+id/layout_music" android:focusable="true" android:focusableInTouchMode="true" android:descendantFocusability="beforeDescendants" android:layout_width="159dp" android:layout_height="159dp" android:layout_marginTop="224dp" android:layout_marginRight="65dp" android:layout_alignParentRight="true">
        <ImageView android:id="@+id/img_music" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/img_music" android:layout_centerInParent="true" android:alpha="0.8"/>
        <TextView android:textSize="25dp" android:textColor="@color/btn_text_color" android:id="@+id/tx_music" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="9dp" android:text="@string/str_music"/>
    </com.canzone.amllauncher.MyRelativeLayout>
    <com.canzone.amllauncher.MyRelativeLayout android:id="@+id/layout_setting" android:focusable="true" android:focusableInTouchMode="true" android:descendantFocusability="beforeDescendants" android:layout_width="159dp" android:layout_height="159dp" android:layout_marginTop="4dp" android:layout_marginRight="65dp" android:layout_below="@+id/layout_music" android:layout_alignParentRight="true">
        <ImageView android:id="@+id/img_setting" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/img_setting" android:layout_centerInParent="true" android:alpha="0.8"/>
        <TextView android:textSize="25dp" android:textColor="@color/btn_text_color" android:id="@+id/tx_setting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="9dp" android:text="@string/str_setting"/>
    </com.canzone.amllauncher.MyRelativeLayout>
    <com.canzone.amllauncher.MyRelativeLayout android:id="@+id/layout_recommend" android:focusable="true" android:focusableInTouchMode="true" android:visibility="gone" android:descendantFocusability="beforeDescendants" android:layout_width="454dp" android:layout_height="229dp" android:layout_marginLeft="434dp" android:layout_marginTop="87dp">
        <ImageView android:id="@+id/img_recommend" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/img_recommend" android:layout_centerInParent="true"/>
        <TextView android:textSize="25dp" android:textColor="@color/btn_text_color" android:id="@+id/tx_recommend" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="9dp" android:text="@string/str_recommend"/>
    </com.canzone.amllauncher.MyRelativeLayout>
    <com.canzone.amllauncher.DigitalClock android:id="@+id/time" android:background="@drawable/time_bg2" android:layout_width="322dp" android:layout_height="156dp" android:layout_marginRight="65dp" android:layout_alignTop="@+id/layout_store" android:layout_alignParentRight="true"/>
    <com.canzone.amllauncher.MyRelativeLayout android:id="@+id/layout_folder" android:focusable="true" android:focusableInTouchMode="true" android:descendantFocusability="beforeDescendants" android:layout_width="159dp" android:layout_height="159dp" android:layout_alignLeft="@+id/layout_local" android:layout_alignTop="@+id/layout_music">
        <ImageView android:id="@+id/img_folder" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/img_folder" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:alpha="0.8"/>
    </com.canzone.amllauncher.MyRelativeLayout>
    <com.canzone.amllauncher.MyRelativeLayout android:id="@+id/layout_local" android:focusable="true" android:focusableInTouchMode="true" android:descendantFocusability="beforeDescendants" android:layout_width="159dp" android:layout_height="159dp" android:layout_alignLeft="@+id/time" android:layout_alignTop="@+id/layout_setting">
        <ImageView android:id="@+id/img_local" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/img_local" android:layout_centerInParent="true" android:alpha="0.8"/>
        <TextView android:textSize="25dp" android:textColor="@color/btn_text_color" android:id="@+id/tx_local" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="9dp" android:text="@string/str_local"/>
    </com.canzone.amllauncher.MyRelativeLayout>
    <LinearLayout android:id="@+id/lin" android:layout_width="326dp" android:layout_height="56dp" android:layout_alignLeft="@+id/time">
        <ImageView android:id="@+id/wifisetting" android:background="@drawable/wifi" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginTop="11dp"/>
        <ImageView android:id="@+id/ethsetting" android:background="@drawable/ethernet" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginLeft="16dp" android:layout_marginTop="11dp"/>
        <ImageView android:id="@+id/btsetting" android:background="@drawable/bluetooth" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginLeft="16dp" android:layout_marginTop="11dp"/>
        <ImageView android:id="@+id/usbsetting" android:background="@drawable/usb" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginLeft="16dp" android:layout_marginTop="11dp"/>
        <ImageView android:id="@+id/sdcardsetting" android:background="@drawable/sdcard" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginLeft="16dp" android:layout_marginTop="11dp"/>
    </LinearLayout>
    <com.canzone.amllauncher.MyRelativeLayout android:id="@+id/layout_clear" android:focusable="true" android:focusableInTouchMode="true" android:visibility="gone" android:descendantFocusability="beforeDescendants" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginLeft="1174dp" android:layout_marginTop="11dp">
        <ImageView android:id="@+id/img_clear" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/img_clear" android:layout_centerInParent="true"/>
        <TextView android:textSize="30dp" android:textColor="@color/btn_text_color" android:id="@+id/tx_clear" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18dp" android:layout_marginTop="13dp" android:text="@string/str_video"/>
    </com.canzone.amllauncher.MyRelativeLayout>
</RelativeLayout>
